--- a/bower.json
+++ b/bower.json
@@ -11,5 +11,10 @@
     "public/bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "google-map": "GoogleWebComponents/google-map#^2.0.3",
+    "good-map": "keanulee/good-map#^0.0.1",
+    "iron-ajax": "PolymerElements/iron-ajax#^2.0.6"
+  }
 }
